--- a/videochat_ver3.html
+++ b/videochat_ver3.html
@@ -2,8 +2,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>video chat!</title>
-  <script type="text/javascript" src="./peer.min.js"></script>
-  <script type="text/javascript" src="./videochat_ver3.js"></script>
+  <script type="text/javascript" src="http://cdn.peerjs.com/0.3/peer.min.js"></script>
+  <script type="text/javascript" src="videochat_ver3.js"></script>
 </head>
  
 <body>
