--- a/videochat_ver2.html
+++ b/videochat_ver2.html
@@ -5,10 +5,10 @@
     <script type="text/javascript" src="videochat.js"></script>
 </head>
 <body>
-    <h1>Simple Video Chat</h1>
+    <h1>ビデオ通話（仮）</h1>
     <div>
-        <video id="my-video" style="width: 300px;" autoplay></video>
-        <video id="peer-video" style="width: 300px;" autoplay></video>
+        <video id="my-video" style="width: 480px;" autoplay></video>
+        <video id="peer-video" style="width: 480px;" autoplay></video>
     </div>
     <div>
         <p>MyID: <span id="my-id">-</span></p>
@@ -16,8 +16,8 @@
     </div>
     <div>
         <input type="text" placeholder="PeerID" id="peer-id-input">
-        <button id="call-start">Start Call</button>
-        <button id="call-end">End Call</button>
+        <button id="call-start">発信</button>
+        <button id="call-end">切断</button>
     </div>
 </body>
 </html>
