--- a/videochat_ver2.html
+++ b/videochat_ver2.html
@@ -11,8 +11,8 @@
         <video id="peer-video" style="width: 480px;" autoplay></video>
     </div>
     <div>
-        <p>MyID: <span id="my-id">-</span></p>
-        <p>PeerID: <span id="peer-id">-</span></p>
+        <p>自分のID: <span id="my-id">-</span></p>
+        <p>相手のID: <span id="peer-id">-</span></p>
     </div>
     <div>
         <input type="text" placeholder="PeerID" id="peer-id-input">
