--- a/videochat_ver2.html
+++ b/videochat_ver2.html
@@ -15,7 +15,7 @@
         <p>相手のID: <span id="peer-id">-</span></p>
     </div>
     <div>
-        <input type="text" placeholder="PeerID" id="peer-id-input">
+        <input type="text" placeholder="相手のIDを入力" id="peer-id-input">
         <button id="call-start">発信</button>
         <button id="call-end">切断</button>
     </div>
